# DailyDigest-AI

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  server.py
.github/workflows/: daily_digest.yml
app/: config.py  database.py  runner.py  schemas.py
app/api/: app.py  auth.py
app/api/routes/: articles.py  health.py  pipeline.py  sources.py  users.py
app/digest/: __init__.py  __main__.py  assembler.py  generator.py  models.py  summarizer.py
app/email/: __init__.py  sender.py
app/ingestion/: base.py  youtube.py
app/ingestion/blog/: __init__.py  __main__.py  fetcher.py  ingester.py
app/ingestion/youtube/: __init__.py  __main__.py  constants.py  ingester.py  resolver.py  scraper.py  transcript.py
app/llm/: __init__.py  anthropic.py  base.py  groq.py  openai.py
app/models/: __init__.py  article.py  base.py  digest.py  mixins.py  source.py  user.py  user_source_alias.py
app/processing/: __init__.py  __main__.py  cleaner.py
app/prompts/: user_interests.md
app/utils/: __init__.py  helpers.py
docker/: docker-compose.yml
docs/: architecture.md  architecture_final.md  dev_architecture.md  example_pipeline.md  implementation.md
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.js  (+1 more)
migrations/: env.py
migrations/versions/: 5a7a206bb668_initial_schema.py  a3f1c2d8e945_multi_user.py  b7d1c2e8e946_add_last_scheduled_digest_at_to_users.py  c1a2b3d4e567_user_source_aliases.py  d4e5f6a7b8c9_add_digest_pause.py
scripts/: seed_sources.py  seed_user.py
(+17 files in other folders)
