[project]
name = "dailydigest-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "feedparser>=6.0.12",
    "groq>=1.5.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.0",
    "resend>=2.32.2",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
