[project]
name = "dailydigest-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "anthropic>=0.116.0",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "feedparser>=6.0.12",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "openai>=2.44.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.0",
    "resend>=2.32.2",
    "sqlalchemy>=2.0",
    "trafilatura>=2.1.0",
    "uvicorn>=0.51.0",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
